Add jvm arguments to gradle build